把/city-data目录的本地数据换成请求服务器的形式,减少小程序打包的体积

--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "release": "sh ./release.sh"
   },
   "dependencies": {
-    "mpvue-citypicker": "^1.0.6",
+    "mpvue-citypicker": "github:yyd1142/mpvue-citypicker",
     "mpvue-picker": "^2.1.6"
   },
   "devDependencies": {
